    vbm_surf_createCS.m.
(2) ornlm_str was missing if only SANLM filter was used in cg_vbm_write.m.

------------------------------------------------------------------------
r618 | gaser | 2014-09-29 15:05:51

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm12.man

Added denoising of initial spm segmentation using spm_mrf.

------------------------------------------------------------------------
r619 | gaser | 2014-09-29 17:13:44

M       CHANGES.txt
M       cg_vbm_write.m
M       vbm12.man

spm_progress_bar was not cleared in cg_vbm_write.m.

------------------------------------------------------------------------
r620 | gaser | 2014-09-29 17:23:14

M       CHANGES.txt
M       vbm_spm.m

SPM is saved using spm_get_defaults('mat.format') in spm_vbm.m.

------------------------------------------------------------------------
r621 | gaser | 2014-09-30 12:16:04

M       CHANGES.txt
M       Makefile.vbm
M       cg_vbm_update.m
M       spm_vbm12.m
M       vbm12.man
M       vbm12.txt

Updated update function and welcome message which is now coded in HTML.

------------------------------------------------------------------------
r622 | gaser | 2014-10-01 11:36:04

M       CHANGES.txt
M       cg_vbm_update.m
M       spm_vbm12.m
M       vbm12.txt

Again updated update function and welcome message which is now coded in HTML.

------------------------------------------------------------------------
r623 | gaser | 2014-10-01 12:45:03

M       CHANGES.txt
M       spm_vbm12.m

Again updated update function and welcome message which is now coded in HTML.

------------------------------------------------------------------------
r624 | gaser | 2014-10-01 12:50:50

M       CHANGES.txt
M       Makefile.vbm
M       cg_vbm_defaults.m
M       spm_vbm12.m
A       vbm12.fig
A       vbm12.m

Added GUI interface.

------------------------------------------------------------------------
r625 | gaser | 2014-10-02 15:27:26